<resources>
    <string name="app_name">GormalOneTest</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product Description</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="add_product">Add Product</string>
    <string name="books">Books</string>
    <string name="sync_products">Sync Products</string>
    <string name="list_of_books_available">List of Books Available</string>
</resources>