<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="30dp"
    tools:context=".ProductDetails">
    <LinearLayout
        android:focusableInTouchMode="true"
        android:paddingBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints="no"
        android:background="@drawable/border"
        android:hint="@string/product_name"
        android:inputType="text"
        android:maxLength="30"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints="no"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLength="100"
        android:minLines="6"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints="no"
        android:background="@drawable/border"
        android:hint="@string/quantity"
        android:inputType="number"
        android:maxLength="4"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints="no"
        android:background="@drawable/border"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="#083FF3"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


    </LinearLayout>
</ScrollView>